tests/snapshots/gql_snapshots__parse_create_edge_pattern_snapshot.snap
---
source: tests/gql_snapshots.rs
expression: stmt
---
Mutation:
  match_clause: ~
  optional_match_clauses: []
  where_clause: ~
  mutations:
    - Create:
        patterns:
          - elements:
              - Node:
                  variable: a
                  labels:
                    - Person
                  properties: []
                  where_clause: ~
              - Edge:
                  variable: ~
                  labels:
                    - KNOWS
                  direction: Outgoing
                  quantifier: ~
                  properties:
                    - - since
                      - Int: 2020
                  where_clause: ~
              - Node:
                  variable: b
                  labels:
                    - Person
                  properties: []
                  where_clause: ~
  return_clause: ~
