tests/snapshots/gql_snapshots__parse_create_edge_type_multiple_sources_snapshot.snap
---
source: tests/gql_snapshots.rs
expression: stmt
---
Ddl:
  CreateEdgeType:
    name: TAGGED
    properties:
      - name: created_at
        prop_type: Int
        required: true
        default: ~
    from_types:
      - Post
      - Comment
      - Photo
    to_types:
      - Tag
