tests/snapshots/gql_snapshots__parse_create_node_type_all_types_snapshot.snap
---
source: tests/gql_snapshots.rs
expression: stmt
---
Ddl:
  CreateNodeType:
    name: DataContainer
    properties:
      - name: str
        prop_type: String
        required: false
        default: ~
      - name: num
        prop_type: Int
        required: false
        default: ~
      - name: flt
        prop_type: Float
        required: false
        default: ~
      - name: flag
        prop_type: Bool
        required: false
        default: ~
      - name: anything
        prop_type: Any
        required: false
        default: ~
