tests/snapshots/gql_snapshots__parse_create_node_type_list_typed_snapshot.snap
---
source: tests/gql_snapshots.rs
expression: stmt
---
Ddl:
  CreateNodeType:
    name: Product
    properties:
      - name: name
        prop_type: String
        required: true
        default: ~
      - name: tags
        prop_type:
          List: String
        required: false
        default: ~
