tests/snapshots/gql_snapshots__parse_create_single_vertex_snapshot.snap
---
source: tests/gql_snapshots.rs
expression: stmt
---
Mutation:
  match_clause: ~
  optional_match_clauses: []
  where_clause: ~
  mutations:
    - Create:
        patterns:
          - elements:
              - Node:
                  variable: p
                  labels:
                    - Person
                  properties:
                    - - name
                      - String: Alice
                    - - age
                      - Int: 30
  return_clause: ~
